<resources>
    <string name="app_name">Keyser Music Player</string>
    <string name="shuffleBtn">Shuffle</string>
    <string name="favouritesBtn">Favourites</string>
    <string name="playlistBtn">Playlists</string>
    <string name="totalSongs">Total Songs</string>
    <string name="keyserMusicPlayer">Keyser Music Player</string>
    <string name="songName">Song Name</string>
    <string name="backBtn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeatBtn">Repeat</string>
    <string name="equalizerBtn">Equalizer</string>
    <string name="timerBtn">Timer</string>
    <string name="shareBtn">Share</string>
    <string name="addBtn">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nKeyser Music Player</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="songAlbum">Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic (Suggestions, Bugs, Errors, etc.)</string>
    <string name="email_feedback">Email Id (Optional)</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version</string>
</resources>