<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="?attr/themeColor">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/musicplayer_splashscreen"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"/>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:contentDescription="@string/playlist_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

    <ImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/delete_icon"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="?attr/themeColor"
        android:contentDescription="@string/playlist_delete" />

</androidx.cardview.widget.CardView>